# PsiForms

./: .gitignore  CMakeLists.txt
inc/: CoxeterForms.hpp  Logger.hpp  ParallelWrapper.hpp  Parser.hpp  PsiForms.hpp  enumerator.hpp  generator.hpp  iterator.hpp  utils.hpp
src/: CoxeterForms.cpp  Logger.cpp  ParallelWrapper.cpp  Parser.cpp  PsiFormUtil.cpp  PsiForms.cpp  enumerator.cpp  generator.cpp  main.cpp  utils.cpp
